--- a/templates/index.html
+++ b/templates/index.html
@@ -225,6 +225,7 @@ body {
 	opacity: 0.9;
 }
 </style>
+<link rel="shortcut icon"  href="{{url_for('static', filename='b.png')}}"">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!--<link type="text/css" rel="stylesheet" href="style.css">-->
 <meta name="robots" content="noindex, follow">
